--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
     lint
     {py34,py35}-django1.8
     {py34,py35,py36,py37}-django1.11
-    {py35,py36,py37}-django2.2
+    {py35,py36,py37,py38}-django2.2
     coverage
 skipsdist = true
 
@@ -21,16 +21,16 @@ setenv =
     PYTHONWARNINGS = all
 
 [testenv:check]
-basepython = python3.7
+basepython = python3.8
 commands = make check
 skip_install = true
 
 [testenv:lint]
-basepython = python3.7
+basepython = python3.8
 commands = make lint
 skip_install = true
 
 [testenv:coverage]
-basepython = python3.7
+basepython = python3.8
 commands = make coverage-report
 skip_install = true
