--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist =
     check
     lint
-    {py35,py36,py37}-django1.11
-    {py35,py36,py37,py38}-django2.2
+    {py36,py37}-django1.11
+    {py36,py37,py38}-django2.2
     coverage
 skipsdist = true
 
