--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,83 +1,53 @@
 name: CI
 on: pull_request
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-20.04
+  matrix:
+    name: Build test matrix
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
-      - name: Python pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements/testing.txt') }}
-      - name: Run check
+          python-version: '3.13'
+          cache: 'pip'
+          cache-dependency-path: 'requirements/*.txt'
+      - name: Run tox
+        id: matrix
         run: |
-          pip install $(grep "^tox==" requirements/local.txt)
-          tox -e check
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.8'
-      - name: Python pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements/testing.txt') }}
-      - name: Run lint
-        run: |
-          pip install $(grep "^tox==" requirements/local.txt)
-          tox -e lint
+          pip install $(grep -E "^(tox|tox-uv)==" requirements/local.txt)
+          echo "tox_matrix=$(tox -l | fgrep -v coverage | python .github/matrix.py)" >> $GITHUB_OUTPUT
+    outputs:
+      tox_matrix: ${{ steps.matrix.outputs.tox_matrix }}
 
   test:
-    name: Test -- Python ${{ matrix.python }} - Django ${{ matrix.django }}
-    runs-on: ubuntu-20.04
+    name: Test -- ${{ matrix.tox_env }}
+    runs-on: ubuntu-24.04
+    needs: matrix
     strategy:
       matrix:
-        python:
-          - '3.6'
-          - '3.7'
-          - '3.8'
-        django:
-          - '1.11'
-          - '2.2'
-        exclude:
-          - python: '3.8'
-            django: '1.11'
+        include: ${{ fromJson(needs.matrix.outputs.tox_matrix) }}
       fail-fast: false
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-      - name: Python pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-python${{ matrix.python }}-django${{ matrix.django }}-pip-${{ hashFiles('requirements/testing.txt') }}
+          cache: 'pip'
+          cache-dependency-path: 'requirements/*.txt'
       - name: Run tests
         env:
           PYTHON_VERSION: ${{ matrix.python }}
         run: |
-          pip install $(grep "^tox==" requirements/local.txt)
-          tox -e py${PYTHON_VERSION//./}-django${{ matrix.django }}
+          pip install $(grep -E "^(tox|tox-uv)==" requirements/local.txt)
+          tox -e ${{ matrix.tox_env }}
