--- a/tox.ini
+++ b/tox.ini
@@ -2,33 +2,30 @@
 envlist =
     check
     lint
-    {py36,py37}-django1.11
-    {py36,py37,py38}-django2.2
+    py{39,310}-django3.2
+    py{39,310,311,312}-django4.2
     coverage
-skipsdist = true
+no_package = true
 
 [testenv]
 deps =
     -rrequirements/testing.txt
-    django1.11: Django>=1.11,<2.0
-    django2.2: Django>=2.2,<3.0
-whitelist_externals = make
+    django3.2: Django>=3.2,<4.0
+    django4.2: Django>=4.2,<5.0
+allowlist_externals = make
 commands = make test
-usedevelop = true
+package = editable
 setenv =
     PYTHONWARNINGS = all
 
 [testenv:check]
-basepython = python3.8
+basepython = python3.13
 commands = make check
-skip_install = true
 
 [testenv:lint]
-basepython = python3.8
+basepython = python3.13
 commands = make lint
-skip_install = true
 
 [testenv:coverage]
-basepython = python3.8
+basepython = python3.13
 commands = make coverage-report
-skip_install = true
