--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,1 @@
-include README.md
-include LICENSE
-graft findreplace
-global-exclude *.py[co]
-global-exclude __pycache__
-global-exclude .DS_Store
+prune tests
