--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          persist-credentials: false
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
-          cache: 'pip'
-          cache-dependency-path: 'requirements/*.txt'
+          python-version: "3.13"
+          cache: "pip"
+          cache-dependency-path: "requirements/*.txt"
       - name: Run tox
         id: matrix
         run: |
@@ -38,16 +39,49 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          persist-credentials: false
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-          cache: 'pip'
-          cache-dependency-path: 'requirements/*.txt'
+          cache: "pip"
+          cache-dependency-path: "requirements/*.txt"
       - name: Run tests
-        env:
-          PYTHON_VERSION: ${{ matrix.python }}
         run: |
           pip install $(grep -E "^(tox|tox-uv)==" requirements/local.txt)
           tox -e ${{ matrix.tox_env }}
+      - name: Upload coverage data
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-data-${{ matrix.tox_env }}
+          include-hidden-files: true
+          path: .coverage.*
+          if-no-files-found: ignore
+
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-24.04
+    needs: test
+    if: always()
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+          cache: "pip"
+          cache-dependency-path: "requirements/*.txt"
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: coverage-data-*
+          merge-multiple: true
+      - name: Run coverage
+        run: |
+          pip install $(grep -E "^(tox|tox-uv)==" requirements/local.txt)
+          tox -e coverage
+          tox -qq exec -e coverage -- coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
